networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-prod
  namespace: tech-prod
spec:
  podSelector:
    matchLabels:
      app: fastapi-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: fastapi-app
    ports:
    - protocol: TCP
      port: 8000
